Updated README.md and fixed bug with page x-overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,15 @@
 /* Removes legacy styles */
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
+}
+
+html, body {
+  margin:0px;
+  padding:0px;
+  width: 100%;
+  overflow-x: clip;
 }
 
 /* Root variable declarations */
